<resources>
    <string name="app_name">Calculator</string>
    <string name="btn0">0</string>
    <string name="btnDecimalDot">.</string>
    <string name="btnEquals">=</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnPlus">+</string>
    <string name="btnMinus">-</string>
    <string name="btnMult">x</string>
    <string name="btnDiv">÷</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnAC">AC</string>
    <string name="btnPlusMinus">+/-</string>
    <string name="btnZero">0</string>
    <string name="btnPercentage">%</string>
    <string name="btnPi">π</string>
    <string name="btnSquareRoot">√</string>
    <string name="back">🔙</string>
</resources>